<resources>
    <string name="app_name">RouteAssist</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="StartListeningButtonText">Ask Bert for help</string>
    <string name="title_activity_menu">menu</string>
    <string name="title_activity_menu2">menu2</string>
    <string name="place_details">
    <![CDATA[
        <b>%1$s</b>
        <br/>
        <i>Place Id: %2$s</i>
        <br/>
        Address: %3$s
        <br/>
        Phone: %4$s
        <br/>
        Website: %5$s
    ]]>
    </string>
    <string name="txtToDoString">What would you like to do?</string>
    <string name="btnFoodString">Food and drinks</string>
    <string name="btnGoString">Go out</string>
    <string name="btnRelaxString">Relaxation</string>
    <string name="txtOrString">- OR -</string>
    <string name="btnLookUpString">Look up a location.</string>
    <string name="selectedPlaceString">Geselecteerde plaats:</string>
    <string name="title_activity_main_navigation">MainNavigation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="hintPassword">Enter Password</string>
    <string name="hintUsername">Enter Username</string>
    <string name="btnSignUp">Sign up</string>
    <string name="txtDebug">DEBUGTEXT</string>
    <string name="teamName">Team Bert</string>
    <string name="teamEmail">wedonthaveanemailaddress@yet.com</string>
    <string name="txtFood">Food and drinks</string>
    <string name="txtGo">Go out</string>
    <string name="txtRelax">Relaxation</string>
    <string name="txtMainHead">What would you like to do?</string>
    <string name="txtSignUp">Sign up.</string>
    <string name="txtLogIn">Log in.</string>
    <string name="btnLogIn">Log in</string>
    <string name="title_activity_maps2">Map</string>
    <string name="txtPref">My preferred activity is:</string>
</resources>