<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".menu">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1">

        <TextView
            android:id="@+id/txtSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtSignUp"
            android:layout_marginTop="80dp"
            android:textAlignment="center"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/txtUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_marginTop="50dp"
            android:inputType="textPersonName"
            android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890-_"
            android:hint="@string/hintUsername"
            android:layout_marginLeft="@dimen/default_margin"
            android:layout_marginRight="@dimen/default_margin"/>

        <EditText
            android:id="@+id/txtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="@string/hintPassword"
            android:layout_marginLeft="@dimen/default_margin"
            android:layout_marginRight="@dimen/default_margin"/>

        <TextView
            android:id="@+id/txtPref"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtPref"
            android:layout_weight="0.03"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="@dimen/default_margin"
            android:layout_marginRight="@dimen/default_margin"/>

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.08"
            android:layout_marginLeft="@dimen/default_margin_small"
            android:layout_marginRight="@dimen/default_margin_small"/>

        <Button
            android:id="@+id/btnConfirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnSignUp"
            android:layout_marginLeft="@dimen/default_margin_button"
            android:layout_marginRight="@dimen/default_margin_button"/>

        <TextView
            android:id="@+id/txtDebug"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtDebug"
            android:layout_marginLeft="@dimen/default_margin_small"
            android:layout_marginTop="@dimen/default_margin_small"/>
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>
