<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.jase.bertapp.LogInActivity">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical" android:layout_width="368dp"
        android:layout_height="495dp"
        tools:layout_editor_absoluteY="8dp"
        tools:layout_editor_absoluteX="8dp">

        <TextView
            android:id="@+id/txtLogIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtLogIn"
            android:layout_marginTop="80dp"
            android:textAlignment="center"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/txtUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_marginTop="50dp"
            android:inputType="textPersonName"
            android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890-_"
            android:hint="@string/hintUsername"
            android:layout_marginLeft="@dimen/default_margin"
            android:layout_marginRight="@dimen/default_margin"/>

        <EditText
            android:id="@+id/txtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="@string/hintPassword"
            android:layout_marginLeft="@dimen/default_margin"
            android:layout_marginRight="@dimen/default_margin"/>

        <Button
            android:id="@+id/btnConfirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnLogIn"
            android:layout_marginLeft="@dimen/default_margin_button"
            android:layout_marginRight="@dimen/default_margin_button"/>

        <TextView
            android:id="@+id/txtDebug"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtDebug"
            android:layout_marginLeft="@dimen/default_margin_small"
            android:layout_marginTop="@dimen/default_margin_small"/>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
