<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".menu">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="1">

        <TextView
            android:id="@+id/txtMainHead"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:text="@string/txtMainHead"
            android:textAlignment="center"
            android:textSize="25sp" />

        <Button
            android:id="@+id/btnFood"
            android:layout_width="match_parent"
            android:layout_height="@dimen/place_autocomplete_separator_start"
            android:layout_marginTop="40dp"
            android:background="@color/colorPrimary"
            android:drawableLeft="@drawable/icon_food_drinks"
            android:text="@string/txtFood"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/aidialog_background" />

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="10dp">

        </android.support.v7.widget.CardView>

        <Button
            android:id="@+id/btnGo"
            android:layout_width="match_parent"
            android:layout_height="@dimen/place_autocomplete_prediction_height"
            android:background="@color/colorPrimary"
            android:drawableLeft="@drawable/icon_going_out"
            android:text="@string/txtGo"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/aidialog_background" />

        <TextView
            android:id="@+id/place_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:autoLink="all"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Button
            android:id="@+id/btnRelax"
            android:layout_width="match_parent"
            android:layout_height="@dimen/place_autocomplete_prediction_height"
            android:background="@color/colorPrimary"
            android:drawableLeft="@drawable/icon_relaxtion"
            android:text="@string/txtRelax"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/aidialog_background" />

        <TextView
            android:id="@+id/place_attribution"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:autoLink="all"
            android:paddingTop="16dp"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <Button
            android:id="@+id/buttonUseVirtualAssistant"
            style="@android:style/Widget.Button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/place_autocomplete_separator_start"
            android:layout_weight="0.17"
            android:background="@color/colorPrimary"
            android:drawableLeft="@drawable/icon_virtual_assistant_3"
            android:text="Virtual Assistant"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/common_google_signin_btn_text_dark_default" />
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>
